# SDL_Projects

./: .gitignore  CMakeLists.txt  app.js  index.html  main.c  massOfPlanets.md  random_walk.c  readme.md  space_sim.c  styles.css
.github/workflows/: static.yml
3141/: 3141.c  README.md
digital_clock/: README.md  clock.c  clock.h  data.h  main.c
docs/: app.js
doom/: README.md  doom  doom.c  kengine.c  kengine.h
fluid/: README.md  fluid.c
imgs/: README.md
log/: logvid_3141.webm
ping_ponk/: Makefile  client.c  game.c  game.h  log.txt  pingo.c  server.c
random_walk/: README.md  random_walk.c
space_sim/: README.md  body.c  body.h  space_sim.c
vids/: README.md
